--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									in order to forecast the prices of Brent crude oil for six<br />
 									months ahead.</p>
 								</header>
-								<a href="./Projects/forecasting-brent-crude-price.html" class="image main"><img src="../ramikhrais.github.io/images/forecasting-oil-price-01" alt="" /></a>
+								<a href="./Projects/forecasting-brent-crude-price.html" class="image main"><img src="../ramikhrais.github.io/images/forecasting-oil-price-01.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="../ramikhrais.github.io/Projects/forecasting-brent-crude-price.html" class="button large">Check it Out</a></li>
 								</ul>
