--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										</a></h2>
 									</header>
 									<a href="./Projects/linear-regression-analysis.html" class="image fit"><img src="../ramikhrais.github.io/images/regression-analysis-01.png" alt="" /></a>
-									<p>In this project, I have used the linear regression model in order to investigate the relationship between the disposable income per capita and the aggregate demand in the Palestinian territories.</p>
+									<p>In this project, I have used the linear regression model in order to investigate the relationships between the disposable income per capita and the aggregate demand in the Palestinian territories.</p>
 									<ul class="actions special">
 										<li><a href="./Projects/linear-regression-analysis.html" class="button">Check it Out</a></li>
 									</ul>
